@startuml XMLSerializer Template Method

skinparam classAttributeIconSize 0

abstract class XMLSerializer {
  + serialize(node) <<template method>>
  + {abstract} case_document(node) <<primitive>>
  + {abstract} case_element(node) <<primitive>>
  + {abstract} case_text(node) <<primitive>>
}

class PrettyXMLSerializer {
  + case_document(node)
  + case_element(node)
  + case_text(node)
}

class MinimalXMLSerializer {
  + case_document(node)
  + case_element(node)
  + case_text(node)
}

XMLSerializer <|-- PrettyXMLSerializer
XMLSerializer <|-- MinimalXMLSerializer

@enduml
